--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -4,10 +4,10 @@ certifi==2017.7.27.1
 cffi==1.11.2
 chardet==3.0.4
 click==6.7
-cryptography==2.0.3
+cryptography>=3.2
 decorator==4.2.1
 enum34==1.1.6
-Flask==0.12.2
+flask>=1.0.0
 idna==2.6
 imutils==0.4.5
 ipaddress==1.0.18
@@ -15,7 +15,7 @@ ipython==6.2.1
 ipython-genutils==0.2.0
 itsdangerous==0.24
 jedi==0.11.1
-Jinja2==2.9.6
+Jinja2>=2.10.1
 MarkupSafe==1.0
 numpy==1.14.0
 opencv-python==3.4.0.12
@@ -27,14 +27,14 @@ ptyprocess==0.5.2
 pycparser==2.18
 Pygments==2.2.0
 PyJWT==1.5.3
-pyOpenSSL==17.3.0
+pyopenssl>=17.5.0
 PySocks==1.6.8
 pytz==2017.2
-requests==2.18.4
+requests>=2.20.0
 simplegeneric==0.8.1
 six==1.11.0
 traitlets==4.3.2
 twilio==6.7.1
-urllib3==1.22
+urllib3>=1.24.2
 wcwidth==0.1.7
-Werkzeug==0.12.2
+werkzeug>=0.15.3
